--- a/index.html
+++ b/index.html
@@ -73,4 +73,10 @@ window.addEventListener('load', () => {
 });
 
 </body></html>
-<script type="module" src="app.js"></script>
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+<!-- Ghostify Backend -->
+<script src="app.js"></script>
