--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@ window.addEventListener('load', () => {
       setTimeout(()=>{ window.location.href = href; }, 250);
     });
   });
-});
+});<canvas id="matrixCanvas"></canvas>
+
 <!-- Ghostify Matrix -->
 <script src="matrix.js"></script>
 
